--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -215,7 +215,7 @@
     <div class="col-md-2"></div>
 
     <div class="col-md-4">
-      <img class="left" src="images/jennifer_dao_2.png">
+      <img class="left" src="images/jennifer_dao.png">
     </div>
 
     <div class="col-md-4 left-margin">
