--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -163,7 +163,7 @@
     </div>
 
 
-<!-- Elizabeth -->
+<!-- Merkley -->
   <div class="row bk-pink">
     <div class="col-md-2"></div>
 
@@ -172,45 +172,39 @@
     </div>
 
     <div class="col-md-4 left-margin">
-      <p class="teachername">Elizabeth Raff</p>
-      <p class="teacherjob">Grade 6 teacher<br>Willow Street, Pennsylvania</p>
+      <p class="teachername">Lauren Merkley</p>
+      <p class="teacherjob">English teacher at Cottonwood High School<br>Murray, Utah</p>
 
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-elizabeth" role="button" aria-expanded="false" aria-controls="collapse-elizabeth">Finding a rhythm</a></p>
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-elizabeth" role="button" aria-expanded="false" aria-controls="collapse-elizabeth">A “both/and” year</a></p>
     </div>
 
     <div class="col-md-2"></div>
   </div>
 
 
-<!-- Elizabeth collapse -->
+<!-- Merkley collapse -->
     <div class="collapse" id="collapse-elizabeth">
       <div class="story">
-        <blockquote>"We finally started to get into a routine ... and that kind of <span class="pink quotebold">normalcy was really important.”</span></blockquote>
+        <blockquote>“I must have said, ‘I can't do this’ 1,000 times this school year … <span class="pink quotebold">But every time — every time! — I could do it.</span> I could keep going.”</blockquote>
 
         <div class="row story-text">
           <div class="col-md-6">
-            <p>The uncertainty of the first few weeks of distance learning created anxiety for students and teachers alike. For Elizabeth Raff, developing a schedule helped. Her school district did not require live instruction, but she posted daily video messages for her students and organized optional weekly Google Hangouts.</p>
-            <p>“I do feel like we finally started to get into a routine once we got into the distance learning … So my students expected the same thing each week, and that kind of normalcy was really important.”</p>
-            <p>Finding a rhythm was bittersweet, though. Raff said that schools shuttered right at the “sweet spot” of the school year when the classroom community begins to deepen.</p>
+            <p>For Lauren Merkley, the 2020-21 school year started with a sense of foreboding. Her school began with both in-person and asynchronous virtual options. That meant she had to build an online class while also preparing for socially distanced traditional instruction. At the same time, ambient anxiety about possible closures loomed large. The school went fully remote twice in the fall because of surging COVID-19 numbers.</p>
+            <p>“First quarter was brutal,” Merkley said. In her virtual classes, there were dozens of students she never saw or heard from. “They were ghosts,” she said. And that meant  failing more students than ever before. It was all so much. “I must have said, ‘I can't do this’ 1,000 times this school year,” Merkley recalled. “But every morning my heart was beating, and I found that I could do it. Whatever ‘it’ was that day.”</p>
           </div>
 
           <div class="col-md-6">
-            <p>“No matter how many cool tech tools you have and how much you can integrate, thoughtfully, technology into dynamic lessons online, that kind of stuff, there's just nothing like the presence of being in person with a group of kids and that learning that takes place there,” she said.</p>
-            <p>If she could do something differently, Raff said she “would have tried to get that groove going a little bit earlier, because we're just trying to hold on to threads right now.”</p>
-            <p>She also would have hugged her students before they left. “I won't see them again in the same kind of capacity, especially because they're sixth-graders and moving on to middle school,” she said.</p>
+            <p>The seeming impossibility of so many tasks forced Merkley, who in 2020 was the Utah Teacher of the Year, to accept imperfection in her teaching. She told students that she was learning alongside them and asked for their feedback. Though uncertainty persisted, things did improve after the first quarter. And like flowers pushing through cracks in concrete, some wonderful moments blossomed, too.  Like when her students read Martin Luther King Jr.’s “Letter from Birmingham Jail.” In FlipGrid video responses and comments, the high schoolers drew connections between King’s rhetoric and contemporary questions about police violence and the Black Lives Matter movement. The discussion had the highest engagement of any activity in Merkley’s virtual classes.</p>
+            <p>While not every lesson sparked that kind of response, Merkley said that the pandemic and the politics of the past year catalyzed students to look beyond their usual rhythm of school or work or soccer practice. They made connections between their lives and larger systems. “It's a both/and,” Merkley said. “It was (a year that we survived). But there were also moments where my kids felt so alive, where they felt so relevant, where what we were doing felt like it mattered.”</p>
+            <p>For some teachers, the pandemic has tipped the scale from a stressful job to an untenable one, prompting them to walk away. Merkley, however, said this year reaffirmed her place in the profession. The successes may have been fewer, but they were hard won. “You're in it to help kids and to have those moments of discovery,” she said. “So when they came this year, I think they were all the sweeter because of that juxtaposition.”</p>
           </div>
-        </div>
-
-        <div class="infographic">
-          <iframe title="Student motivation and engagement during emergency distance learning in spring 2020" aria-label="Split Bars" id="datawrapper-chart-hOZco" src="https://datawrapper.dwcdn.net/hOZco/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="292"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-          </script>
         </div>
       </div>
     </div>
 
 
 
-<!-- Open Colby row -->
+<!-- Open Dao row -->
   <div class="row bk-purple">
     <div class="col-md-2"></div>
 
@@ -219,32 +213,31 @@
     </div>
 
     <div class="col-md-4 left-margin">
-      <p class="teachername">Colby Sharp</p>
-      <p class="teacherjob">Grade 5 teacher<br>Parma, Michigan</p>
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-colby" role="button" aria-expanded="false" aria-controls="collapse-colby">One family, many<br>video calls</a></p>
+      <p class="teachername">Jennifer Dao</p>
+      <p class="teacherjob">Algebra teacher at Nichols Middle School<br>Evanston, Illinois</p>
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-colby" role="button" aria-expanded="false" aria-controls="collapse-colby">Tapping into<br>technology</a></p>
     </div>
 
     <div class="col-md-2"></div>
 
   </div>
 
-<!-- Close Colby row -->
+<!-- Close Dao row -->
 
-<!-- Colby collapse -->
+<!-- Dao collapse -->
       <div class="collapse" id="collapse-colby">
         <div class="story">
-          <blockquote class="wide">"Today during the Zoom with my students, <span class="purple quotebold">my 3-year-old was sitting at the table and singing the Power Rangers theme song</span> the entire time."</blockquote>
+          <blockquote class="wide">"I used to think I was a pretty tech savvy teacher, but remote learning has taught me to <span class="purple quotebold">tap more into my tech skills </span>and use them to be more intentional with my students."</blockquote>
 
           <div class="row story-text">
             <div class="col-md-6">
-              <p>Colby Sharp is a father of five children, four of whom are school-age. Both he and his wife are teachers. That meant between kids and adults, they were managing between 30 and 40 virtual meetings per week.</p>
-              <p>It’s been tricky, Sharp said. “Today during the Zoom with my students, my 3-year-old was sitting at the table and singing the Power Rangers theme song the entire time. The (students) really enjoy that stuff when the kids drop by or the cats drop by.”
-              <p>Students also have benefitted from unstructured time to chat at the start and end of classes, Sharp said.</p>
+              <p>Jennifer Dao’s mathematics teaching style has always been pretty open-ended. There’s a lesson plan and a learning goal, of course, but after presenting a problem, she follows her students’ lead. “Whatever the kids do, I use it throughout the lesson to summarize and to piece together their work,” she explained.</p>
+              <p>Without students in the same room as her until February, Dao decided to implement a new structure this year. Along with some colleagues, she adopted a practice called learning contracts from Larry Geni, a retired science teacher. Using this model, Dao started each class with a slide containing information and links to everything that would be covered that day. The class spent the first 40 minutes on a warm-up and the main lesson. For the second half of class, students chose a task from three options — “mild,” "medium" or "spicy" — to work on independently or with small groups.</p>
             </div>
 
             <div class="col-md-6">
-              <p>“I like to have a bit of a soft start to my school day where kids come in and kind of work on whatever it is they want to work on. Some are drawing. Some are writing. Some are chit-chatting. Some are reading magazines. Just that part, letting them hang out, I think has worked pretty well. Just letting them be 10.”</p>
-              <p>Sharp also said recording his own video lessons rather than relying on pre-existing materials was important. “Kids come to school for a lot of reasons and a big reason is for the teachers. We can't be content with other people just showing videos or why do kids even need to come back to school? So I'm trying to give them me as much as possible.”</p>
+              <p>A mild task might be watching a review video on a foundational skill or completing guided notes with teacher support. Medium typically meant practice exercises for the day’s topic. And spicy tasks were advanced challenges related to the standard. Dao said this structure helped her organize class more clearly, and it showed her that students benefit from visual and written instructions, in addition to the oral ones she gives in-person. “I used to think I was a pretty tech savvy teacher, but remote learning has taught me to tap more into my tech skills and use them to be more intentional with my students,” she said.</p>
+              <p>Choosing between tasks also improved students’ metacognitive skills by requiring them to take stock of their understanding. Students were “brutally honest” about themselves in weekly self-evaluations and optional blog posts, Dao said. Since she couldn’t see students’ independent work on paper, reading their self-reflections encouraged her. “It made me feel like the work that I put in wasn't for nothing, because a lot of teachers felt that frustration on Zoom, seeing just squares on a page. … It gave me a better snapshot of the kids.”</p>
             </div>
           </div>
         </div>
