--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -57,21 +57,21 @@
 <!-- Open FLuid container -->
   <div class="container-fluid">
 
-<!-- Coral row -->
+<!-- Lucia row -->
   <div class="row bk-yellow">
 
     <div class="col-md-2"></div>
 
     <div class="col-md-4">
-      <p class="teachername">Coral Zayas</p>
+      <img class="left" src="images/lucia_bowers.png">
+    </div>
+
+    <div class="col-md-4 left-margin">
+      <p class="teachername">Lucia Bowers</p>
       <p class="teacherjob">Bilingual grade 5 science teacher<br>Austin, Texas</p>
 
       <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-coral" role="button" aria-expanded="false" aria-controls="collapse-coral">The digital divide</a>
       </p>
-    </div>
-
-    <div class="col-md-4">
-      <img class="right" src="images/Coral Zayas.png">
     </div>
 
     <div class="col-md-2"></div>
@@ -97,21 +97,6 @@
         <p>“That has been crucial for me, because a lot of times I feel that those who are not teachers do not really understand everything that we do on a daily basis. But teachers do,” she said.</p>
       </div>
     </div>
-
-<div class="row">
-    <div class="col-md-8 infographic">
-      <iframe title="Public School Children's Access to Technology" aria-label="Grouped Bars" id="datawrapper-chart-YZ51y" src="https://datawrapper.dwcdn.net/YZ51y/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="367"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-      </script>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-12 infographic">
-      <iframe title="Home internet access among public school children" aria-label="Map" id="datawrapper-chart-IDI6p" src="https://datawrapper.dwcdn.net/IDI6p/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="653"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-      </script>
-    </div>
-</div>
-
 
 </div>
 </div>
