--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -76,9 +76,9 @@
 
     <div class="col-md-2"></div>
   </div>
-<!-- close Coral row-->
+<!-- close Lucia row-->
 
-<!-- Coral collapse -->
+<!-- Lucia collapse -->
   <div class="collapse" id="collapse-coral">
     <div class="story">
 
@@ -153,14 +153,14 @@
     <div class="col-md-2"></div>
 
     <div class="col-md-4">
-      <img class="left" src="images/lauren_merkley.png">
-    </div>
-
-    <div class="col-md-4 left-margin">
       <p class="teachername">Lauren Merkley</p>
       <p class="teacherjob">English teacher at Cottonwood High School<br>Murray, Utah</p>
 
       <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-elizabeth" role="button" aria-expanded="false" aria-controls="collapse-elizabeth">A “both/and” year</a></p>
+    </div>
+
+    <div class="col-md-4">
+      <img class="left" src="images/lauren_merkley.png">
     </div>
 
     <div class="col-md-2"></div>
