--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -57,7 +57,7 @@
 <!-- Open FLuid container -->
   <div class="container-fluid">
 
-<!-- Lucia row -->
+<!-- Open Lucia row -->
   <div class="row bk-yellow">
 
     <div class="col-md-2"></div>
@@ -68,9 +68,9 @@
 
     <div class="col-md-4 left-margin">
       <p class="teachername">Lucia Bowers</p>
-      <p class="teacherjob">Bilingual grade 5 science teacher<br>Austin, Texas</p>
+      <p class="teacherjob">English teacher<br>Dolores Huerta Middle School<br>Burbank, California</p>
 
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-coral" role="button" aria-expanded="false" aria-controls="collapse-coral">The digital divide</a>
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-coral" role="button" aria-expanded="false" aria-controls="collapse-coral">Recognizing resilience</a>
       </p>
     </div>
 
@@ -104,28 +104,28 @@
   </div>
 
 
-<!-- José row -->
+<!-- Open Rickey row -->
   <div class="row bk-orange">
 
     <div class="col-md-2"></div>
 
-    <div class="col-md-4">
-      <img class="left" src="images/rickey_townsend.png">
+    <div class="col-md-4 left-margin">
+      <p class="teachername">Rickey Townsend</p>
+      <p class="teacherjob">7th grade math teacher<br>Benjamin Franklin International Exploratory Academy<br>Washington Heights, New York</p>
+
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-jose" role="button" aria-expanded="false" aria-controls="collapse-jose">Opening up online</a></p>
     </div>
 
-    <div class="col-md-4 left-margin">
-      <p class="teachername">José Vilson</p>
-      <p class="teacherjob">Middle school math teacher<br>Washington Heights, New York</p>
-
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-jose" role="button" aria-expanded="false" aria-controls="collapse-jose">At the epicenter of<br>the virus</a></p>
+    <div class="col-md-4">
+      <img class="right" src="images/rickey_townsend.png">
     </div>
 
     <div class="col-md-2"></div>
 
   </div>
-<!-- close José row-->
+<!-- close Rickey row-->
 
-<!-- José collapse -->
+<!-- Rickey collapse -->
     <div class="collapse" id="collapse-jose">
       <div class="story">
         <blockquote>"The whole first two months and change, <span class="orange quotebold">we were hearing about 10 sirens a day.”</span></blockquote>
@@ -148,13 +148,13 @@
     </div>
 
 
-<!-- Merkley -->
+<!-- Open Merkley row -->
   <div class="row bk-pink">
     <div class="col-md-2"></div>
 
     <div class="col-md-4">
       <p class="teachername">Lauren Merkley</p>
-      <p class="teacherjob">English teacher at Cottonwood High School<br>Murray, Utah</p>
+      <p class="teacherjob">English teacher<br> Cottonwood High School<br>Murray, Utah</p>
 
       <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-elizabeth" role="button" aria-expanded="false" aria-controls="collapse-elizabeth">A “both/and” year</a></p>
     </div>
@@ -199,8 +199,8 @@
 
     <div class="col-md-4 left-margin">
       <p class="teachername">Jennifer Dao</p>
-      <p class="teacherjob">Algebra teacher at Nichols Middle School<br>Evanston, Illinois</p>
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-colby" role="button" aria-expanded="false" aria-controls="collapse-colby">Tapping into<br>technology</a></p>
+      <p class="teacherjob">Algebra teacher<br>Nichols Middle School<br>Evanston, Illinois</p>
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-colby" role="button" aria-expanded="false" aria-controls="collapse-colby">Tapping into technology</a></p>
     </div>
 
     <div class="col-md-2"></div>
@@ -228,20 +228,20 @@
         </div>
       </div>
 
-<!-- Open Juan row -->
+<!-- Open Janelle row -->
   <div class="row bk-blue">
 
     <div class="col-md-2"></div>
 
     <div class="col-md-4 left-margin">
-      <p class="teachername">Juan Gonzalez Jr.</p>
-      <p class="teacherjob">Grade 3 teacher<br>Dickinson, Texas</p>
+      <p class="teachername">Janelle Henderson</p>
+      <p class="teacherjob">Grade 3 teacher<br>Mill Creek Leadership Academy<br>Louisville, Kentucky</p>
 
       <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-juan" role="button" aria-expanded="false" aria-controls="collapse-juan">Long hours and<br>enormous guilt</a></p>
     </div>
 
     <div class="col-md-4">
-      <img class="right" src="images/Juan Gonzalez Jr.png">
+      <img class="left" src="images/janelle_henderson.png">
     </div>
 
     <div class="col-md-2"></div>
