--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -109,7 +109,7 @@
 
     <div class="col-md-2"></div>
 
-    <div class="col-md-4 left-margin">
+    <div class="col-md-4">
       <p class="teachername">Rickey Townsend</p>
       <p class="teacherjob">7th grade math teacher<br>Benjamin Franklin International Exploratory Academy<br>Washington Heights, New York</p>
 
@@ -233,15 +233,15 @@
 
     <div class="col-md-2"></div>
 
+    <div class="col-md-4">
+      <img class="left" src="images/janelle_henderson.png">
+    </div>
+
     <div class="col-md-4 left-margin">
       <p class="teachername">Janelle Henderson</p>
       <p class="teacherjob">Grade 3 teacher<br>Mill Creek Leadership Academy<br>Louisville, Kentucky</p>
 
-      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-juan" role="button" aria-expanded="false" aria-controls="collapse-juan">Long hours and<br>enormous guilt</a></p>
-    </div>
-
-    <div class="col-md-4">
-      <img class="left" src="images/janelle_henderson.png">
+      <p><a class="btn btn-dark text-white" data-toggle="collapse" href="#collapse-juan" role="button" aria-expanded="false" aria-controls="collapse-juan">Hard conversations,<br>healthy habits</a></p>
     </div>
 
     <div class="col-md-2"></div>
