--- a/unplanned_lessons/index.html
+++ b/unplanned_lessons/index.html
@@ -48,7 +48,7 @@
   <div class="container">
     <p class="dek">New technology. Grieving students. Mass absenteeism.</p>
 
-    <p class="intro1">Whether teachers faced a sea of black Zoom boxes, juggled simultaneous instruction for at-home and in-person learners, or taught full classrooms while worrying about COVID-19 spread, last school year was unlike any before it. But challenges weren’t all that was in store. Amid the uncertainty, the stress and the struggles, many educators gained new insights on themselves, their students and their practice. Here, five teachers across the U.S. share the unplanned lessons they learned in 2020-21 and what they’ll take with them after the pandemic.</p>
+    <p class="intro1">Whether teaching virtually, hybrid or in-person, the COVID-19 pandemic and political upheaval in the United States made the last school year unlike any before it. But challenges weren’t all that was in store. Amid the uncertainty and the stress, many educators gained new insights on themselves, their students and their practice. Here, five teachers across the U.S. share the unplanned lessons they learned in 2020-21 and what they’ll take with them after the pandemic.</p>
 
   </div>
 <!-- Close container -->
@@ -160,7 +160,7 @@
     </div>
 
     <div class="col-md-4">
-      <img class="left" src="images/lauren_merkley.png">
+      <img class="right" src="images/lauren_merkley.png">
     </div>
 
     <div class="col-md-2"></div>
